<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtViewIdea"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/idea_text" />

        <TextView
                android:id="@+id/txtViewImportant"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/important_text"
               />

        <TextView
            android:id="@+id/txtViewTodo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="end"
            android:text="@string/todo_text" />


    </LinearLayout>

    <TextView
        android:id="@+id/txtViewTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="32dp"
        android:text="Title"

        />

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
           <TextView
               android:id="@+id/txtDescription"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:text="TextView"
               />

   </ScrollView>


    <Button
        android:id="@+id/btnOk"
        android:layout_width="107dp"
        android:layout_height="58dp"
        android:gravity="center"
        android:layout_marginLeft="150dp"
        android:layout_marginBottom="112dp"
        android:text="@string/ok_button" />
</LinearLayout>




